<resources>
    <string name="app_name">DressGudie</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">类型: %1$s</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_review_password">Repeat Password</string>
    <string name="prompt_username">username</string>
    <string name="action_cancel">取消</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_remeber_acc">记住用户名和密码</string>

    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_unregister_email">此电子邮件地址未注册</string>
    <string name="error_registered_email">该邮箱已被注册</string>

    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此处不能为空</string>
    <string name="error_differet_password">两次密码不一致</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_update">更改</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_user_info">个人信息</string>
    <string name="title_activity_test">TestActivity</string>


</resources>
